--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Index page</title>
 </head>
 <body>
-    
+    <div>kwjdfhd</div>
+    <div>hyfghg</div>
+    <div>jhbh</div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 </body>
 </html>
