--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <div></div>
     <div></div>
     <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
     <div></div>
     <div></div>
     <div></div>
