--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
     <div></div>
     <div></div>
     <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
 </body>
 </html>
