--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 <div id="section3" class="section" tabindex="0">
     Section 3
 </div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
 <script>
     function navigateToSection() {
       const targetSectionId = 'section3'; // Directly specify the ID of the target section
