--- a/index.html
+++ b/index.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ARIA Flowto Example</title>
+<style>
+    .section {
+      padding: 20px;
+      margin: 10px;
+      border: 1px solid #ccc;
+    }
+ 
+    button {
+      margin-top: 10px;
+    }
+</style>
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+<div id="section1" class="section" tabindex="0">
+    Section 1
+    <button role="button" aria-controls="section3" onclick="navigateToSection()">Go to Section 3</button>
+</div>
+<div id="section2" class="section" tabindex="0">
+    Section 2
+</div>
+<div id="section3" class="section" tabindex="0">
+    Section 3
+</div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<script>
+    function navigateToSection() {
+      const targetSectionId = 'section3'; // Directly specify the ID of the target section
+      const targetSection = document.getElementById(targetSectionId);
+      if (targetSection) {
+        targetSection.focus();
+      }
+    }
+</script>
 </body>
 </html>
